--- a/config/sync/core.entity_view_display.node.localgov_news_article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.teaser.yml
@@ -13,6 +13,7 @@ dependencies:
     - node.type.localgov_news_article
   module:
     - datetime
+    - field_formatter_class
     - text
     - user
   enforced:
@@ -26,34 +27,48 @@ bundle: localgov_news_article
 mode: teaser
 content:
   body:
-    label: hidden
     type: text_summary_or_trimmed
-    weight: 1
+    label: hidden
     settings:
       trim_length: 600
+    third_party_settings:
+      field_formatter_class:
+        class: ''
+    weight: 3
+    region: content
+  content_moderation_control:
+    settings: {  }
     third_party_settings: {  }
+    weight: 0
     region: content
   field_media_image:
     type: entity_reference_entity_view
-    weight: 0
-    region: content
     label: hidden
     settings:
       view_mode: localgov_newsroom_teaser
       link: false
     third_party_settings: {  }
-  localgov_news_date:
-    type: datetime_custom
+    weight: 1
+    region: content
+  localgov_news_categories:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
     weight: 2
     region: content
+  localgov_news_date:
+    type: datetime_custom
     label: hidden
     settings:
       timezone_override: ''
       date_format: 'j F Y'
     third_party_settings: {  }
+    weight: 4
+    region: content
 hidden:
   links: true
-  localgov_news_categories: true
   localgov_news_related: true
   localgov_newsroom: true
   search_api_excerpt: true
