--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -14,6 +14,7 @@ module:
   config: 0
   content_moderation: 0
   contextual: 0
+  created_date_views_filters: 0
   crop: 0
   date_recur: 0
   date_recur_modular: 0
