--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -82,6 +82,11 @@ menu-main:
     theme:
       css/components/menu-main.css: {}
 
+newsroom:
+  css:
+    theme:
+      css/components/newsroom.css: {}
+
 page-sections:
   css:
     theme:
