Update composer install command to include --dev

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
       - run: ddev
 
       - name: Install composer dependencies
-        run: ddev composer install --no-progress
+        run: ddev composer install --dev --no-progress
 
       - run: ddev
 
