--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Set up DDEV
         uses: ddev/github-action-setup-ddev@v1
 
-      - run: ddev
-
       - name: Install composer dependencies
         run: ddev composer install --dev --no-progress
 
       - run: ddev
+
+      - run: ls .ddev/commands/web
 
       - name: Check PHP coding standards
         run: ddev phpcs web/themes/custom/pcc --ignore=web/themes/custom/pcc/node_modules
