various css changes

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/created_date_views_filters": "^1.0",
+        "drupal/entity_clone": "^2.1@beta",
         "drupal/formdazzle": "^4.0",
         "drupal/token_filter": "^2.2",
         "drupal/trash": "^3.0",
