--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,17 +20,16 @@ jobs:
     steps:
       - name: Check out project
         uses: actions/checkout@v5
-
-      - name: Install composer dependencies
-        run: ddev composer install --no-progress
-      
+        
       - name: Set up DDEV
         uses: ddev/github-action-setup-ddev@v1
 
+      - name: Install composer dependencies
+        run: ddev composer install --no-progress
 
       - run: ddev
 
-      - run: ls .ddev/commands/web
+      - run: tree .ddev/commands
 
       - name: Check PHP coding standards
         run: ddev phpcs web/themes/custom/pcc --ignore=web/themes/custom/pcc/node_modules
