--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,21 +15,41 @@ env:
   LOCALGOV_DRUPAL_PROJECT_PATH: web/themes/custom/pcc
 
 jobs:
-  test:
+  testing:
+    name: Drupal ${{ matrix.drupal-core }} - PHP ${{ matrix.php-versions }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        drupal-core: ['9.3.x', '9.4.x']
+        php-versions: ['7.4', '8.0']
+
     steps:
-      - name: Check out project
-        uses: actions/checkout@v5
-        
-      - name: Set up DDEV
-        uses: ddev/github-action-setup-ddev@v1
-
+      - name: Checkout project
+        uses: actions/checkout@v2
+    
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          coverage: none
+    
+      - name: Get composer cache directory
+        id: composercache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+    
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composercache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+    
       - name: Install composer dependencies
-        run: ddev composer install --no-progress
-
-      - run: ddev
-
-      - run: tree .ddev/commands
-
-      - name: Check PHP coding standards
-        run: ddev phpcs web/themes/custom/pcc --ignore=web/themes/custom/pcc/node_modules
+        run: |
+          composer --no-interaction --no-progress --prefer-dist --optimize-autoloader install
+    
+      - name: Check coding standards
+        run: |
+          ./vendor/bin/phpcs --config-set installed_paths vendor/drupal/coder/coder_sniffer
+          ./vendor/bin/phpcs --standard=Drupal,DrupalPractice --extensions=php,module,install,js themes/custom/pcc
