--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        drupal-core: ['9.3.x', '9.4.x']
-        php-versions: ['7.4', '8.0']
+        drupal-core: ['10.3.x']
+        php-versions: ['8.3']
 
     steps:
       - name: Checkout project
