--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ env:
   LOCALGOV_DRUPAL_PROJECT_PATH: web/themes/custom/pcc
 
 jobs:
-  testing:
+  build:
     name: Drupal ${{ matrix.drupal-core }} - PHP ${{ matrix.php-versions }}
     runs-on: ubuntu-latest
     strategy:
@@ -27,6 +27,11 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v5
+
+      - name: Cached workspace
+        uses: actions/cache@v4
+        with:
+          key: build-{{ runner.os }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
     
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
@@ -34,16 +39,16 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           coverage: none
     
-      - name: Get composer cache directory
-        id: composercache
-        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+      # - name: Get composer cache directory
+      #   id: composercache
+      #   run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
     
-      - name: Cache composer dependencies
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.composercache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
+      # - name: Cache composer dependencies
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ${{ steps.composercache.outputs.dir }}
+      #     key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+      #     restore-keys: ${{ runner.os }}-composer-
     
       - name: Install composer dependencies
         run: |
