--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
+          path: .
           key: build-{{ runner.os }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
     
       - name: Setup PHP, with composer and extensions
