--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 env:
-  LOCALGOV_DRUPAL_PROJECT_PATH: web/themes/custom/pcc
+  PROJECT_PATH: web/themes/custom/pcc
 
 jobs:
   build:
@@ -27,32 +27,27 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v5
-
-      - name: Cached workspace
-        uses: actions/cache@v4
-        with:
-          path: .
-          key: build-${{ matrix.drupal-core }}-${{ matrix.php-versions }}-${{ github.run_id }}
     
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          coverage: none
-    
-      # - name: Get composer cache directory
-      #   id: composercache
-      #   run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-    
-      # - name: Cache composer dependencies
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: ${{ steps.composercache.outputs.dir }}
-      #     key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-      #     restore-keys: ${{ runner.os }}-composer-
-    
+          
       - name: Install composer dependencies
-        run: composer --no-interaction --no-progress --prefer-dist --optimize-autoloader install
-    
+        uses: ramsey/composer-install@v3
+
+  phpcs:
+    name: Coding standards checks
+    needs: build
+    runs-on: ubuntu-latest
+    steps:  
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v3
+          
       - name: Check coding standards
-        run: ./bin/phpcbf --standard=Drupal,DrupalPractice --extensions=php,theme,install,css,js --ignore=node_modules -v web/themes/custom/pcc
+        run: ./bin/phpcs --standard=Drupal,DrupalPractice --extensions=php,theme,install,css,js --ignore=node_modules -v %{{ env.PROJECT_PATH }}
