--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,6 @@ env:
 
 jobs:
   build:
-    name: Drupal ${{ matrix.drupal-core }} - PHP ${{ matrix.php-versions }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -29,20 +28,24 @@ jobs:
         with:
           path: .
           key: build-${{ matrix.php-version }}-${{ github.run_id }}
-          
+
       - name: Check out project
         uses: actions/checkout@v5
 
-      # - name: Setup PHP, with composer and extensions
-      - uses: shivammathur/setup-php@v2
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
 
-      # - name: Install composer dependencies
-      - uses: ramsey/composer-install@v3
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v3
+
+      - name: Install core npm dependencies
+        run: |
+          cd web/core
+          npm i
 
   phpcs:
-    name: Coding standards checks
     needs: build
     runs-on: ubuntu-latest
     strategy:
@@ -57,17 +60,27 @@ jobs:
           key: build-${{ matrix.php-version }}-${{ github.run_id }}
           restore-keys: |
             build-${{ matrix.php-version }}-
-    
-      # - name: Checkout project
-      #   uses: actions/checkout@v5
-
-      # - name: Setup PHP
-      #   uses: shivammathur/setup-php@v2
-      #   with:
-      #     php-version: ${{ matrix.php-version }}
-
-      # - name: Install composer dependencies
-      #   uses: ramsey/composer-install@v3
 
       - name: Check coding standards
         run: ./bin/phpcs --standard=Drupal,DrupalPractice --extensions=php,theme,install,css,js --ignore=node_modules -v ${{ env.PROJECT_PATH }}
+
+  stylelint:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php-version: ["8.3"]
+    steps:
+      - name: Cached workspace
+        uses: actions/cache@v4
+        with:
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          restore-keys: |
+            build-${{ matrix.php-version }}-
+
+      - name: Lint CSS
+        run: |
+          cd web/core
+          node ./node_modules/.bin/stylelint --ignore-path .stylelintignore --config .stylelintrc.json "../${{ env.PROJECT_PATH }}/**/*.css"
