--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ["8.3"]
+        php-version: ["8.2", "8.3"]
 
     steps:
       - name: Cached workspace
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ["8.3"]
+        php-version: ["8.2", "8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
