--- a/config/sync/core.entity_view_display.node.localgov_newsroom.default.yml
+++ b/config/sync/core.entity_view_display.node.localgov_newsroom.default.yml
@@ -17,6 +17,11 @@ targetEntityType: node
 bundle: localgov_newsroom
 mode: default
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   links:
     settings: {  }
     third_party_settings: {  }
