--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -16,6 +16,7 @@ module:
   contextual: 0
   created_date_views_filters: 0
   crop: 0
+  date_popup: 0
   date_recur: 0
   date_recur_modular: 0
   datetime: 0
