--- a/config/sync/core.entity_view_display.node.localgov_newsroom.default.yml
+++ b/config/sync/core.entity_view_display.node.localgov_newsroom.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.localgov_newsroom.localgov_newsroom_featured
     - node.type.localgov_newsroom
   module:
+    - field_formatter_class
     - user
   enforced:
     module:
@@ -48,7 +49,9 @@ content:
     settings:
       view_mode: localgov_card
       link: false
-    third_party_settings: {  }
+    third_party_settings:
+      field_formatter_class:
+        class: ''
     weight: 0
     region: content
 hidden:
