--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,192 +1,150 @@
-##
-# Managed by https://github.com/localgovdrupal/github_workflow_manager
----
-name: Test localgovdrupal/localgov-project project
+name: Test project
 
 on:
-  push:
-    branches:
-      - '3.x'
-  pull_request:
-    branches:
-      - '3.x'
+  # push:
+  #   branches:
+  #     - "6-test-action"
+  # pull_request:
+  #   branches:
+  #     - "6-test-action"
   schedule:
-    - cron: '0 7 * * *'
+    - cron: "0 7 * * *"
   workflow_dispatch:
 
 env:
-  LOCALGOV_DRUPAL_PROJECT: localgovdrupal/localgov-project
-  LOCALGOV_DRUPAL_PROJECT_PATH:
+  PROJECT_PATH: web/themes/custom/pcc
 
 jobs:
   build:
-    name: Install LocalGov Drupal
     runs-on: ubuntu-latest
-    env:
-      COMPOSER_EXIT_ON_PATCH_FAILURE: '1'
-
     strategy:
       fail-fast: false
       matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.1'
-          - '8.2'
-          - '8.3'
+        php-version: ["8.3"]
 
     steps:
-      - name: Save git branch and git repo names to env if this is not a pull request
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "GIT_BASE=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-          echo "GIT_BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-          echo "GIT_REPO=${GITHUB_REPOSITORY}" >> $GITHUB_ENV
-
-      - name: Save git branch and git repo names to env if this is a pull request
-        if: github.event_name == 'pull_request'
-        run: |
-          echo "GIT_BASE=${GITHUB_BASE_REF}" >> $GITHUB_ENV
-          echo "GIT_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_ENV
-          echo "GIT_REPO=${{ github.event.pull_request.head.repo.full_name }}" >> $GITHUB_ENV
-
-      - name: Set composer branch reference for version branches
-        if: endsWith(github.ref, '.x')
-        run: echo "COMPOSER_REF=${GIT_BRANCH}-dev" >> $GITHUB_ENV
-
-      - name: Set composer branch reference for non-version branches
-        if: endsWith(github.ref, '.x') == false
-        run: echo "COMPOSER_REF=dev-${GIT_BRANCH}" >> $GITHUB_ENV
-
       - name: Cached workspace
         uses: actions/cache@v4
         with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
 
-      - name: Setup PHP
+      - name: Check out project
+        uses: actions/checkout@v5
+
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-version }}
 
-      - name: Clone drupal_container
-        uses: actions/checkout@v4
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v3
+
+      - name: Install core npm dependencies
+        run: |
+          cd web/core
+          npm i
+
+  eslint-js:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php-version: ["8.3"]
+    steps:
+      - name: Cached workspace
+        uses: actions/cache@v4
         with:
-          repository: localgovdrupal/drupal-container
-          ref: php${{ matrix.php-version }}
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          restore-keys: |
+            build-${{ matrix.php-version }}-
+      - name: Lint JS
+        if: ${{ hashFiles(format('./{0}/**/*.js', env.PROJECT_PATH)) != '' }}
+        run: |
+          cd web/core
+          node ./node_modules/eslint/bin/eslint.js --ext .js --resolve-plugins-relative-to=./web/core ../../${{ env.PROJECT_PATH }}
 
-      - name: Create LocalGov Drupal project
-        run: composer create-project --stability dev localgovdrupal/localgov-project:${COMPOSER_REF} ./html
-
-      - name: Obtain all dev dependencies for LocalGov Drupal
-        run: jq --raw-output '.packages[] | select(.name | startswith("localgovdrupal/")) | ."require-dev" | values | to_entries[] | @sh "\(.key):\(.value)"' ./html/composer.lock | sort | uniq | xargs composer --working-dir=./html require --dev --no-interaction
+  eslint-yaml:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php-version: ["8.3"]
+    steps:
+      - name: Cached workspace
+        uses: actions/cache@v4
+        with:
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          restore-keys: |
+            build-${{ matrix.php-version }}-
+      - name: Lint YAML
+        if: ${{ hashFiles(format('./{0}/**/*.yml', env.PROJECT_PATH)) != '' }}
+        run: |
+          cd web/core
+          node ./node_modules/eslint/bin/eslint.js --ext .yml --resolve-plugins-relative-to=./web/core ../../${{ env.PROJECT_PATH }}
 
   phpcs:
-    name: Coding standards checks
     needs: build
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.3'
-
+        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
           restore-keys: |
-            localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-
+            build-${{ matrix.php-version }}-
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-
-      - name: Run coding standards checks
-        run: |
-          cd html
-          ./bin/phpcs -p ${LOCALGOV_DRUPAL_PROJECT_PATH}
+      - name: Check coding standards
+        run: ./bin/phpcs --standard=Drupal,DrupalPractice --extensions=php,theme,install,css,js --ignore=node_modules -v ${{ env.PROJECT_PATH }}
 
   phpstan:
-    name: Static analysis checks
     needs: build
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.3'
-
+        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
           restore-keys: |
-            localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-
+            build-${{ matrix.php-version }}-
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-version }}
-
-      - name: Run PHPStan code checks
+      - name: Run static analysis checks
+        if: ${{ hashFiles(format('./{0}/**/*.inc', inputs.project_path), format('./{0}/**/*.install', inputs.project_path), format('./{0}/**/*.module', inputs.project_path), format('./{0}/**/*.php', inputs.project_path), format('./{0}/**/*.profile', inputs.project_path), format('./{0}/**/*.test', inputs.project_path), format('./{0}/**/*.theme', inputs.project_path)) != '' }}
         run: |
-          cd html
-          ./bin/phpstan analyse -c ./phpstan.neon ./web/modules/contrib/localgov* ./web/profiles/contrib/localgov* ./web/themes/contrib/localgov*
-  phpunit:
-    name: PHPUnit tests
+          ./bin/phpstan analyse ${{ env.PROJECT_PATH }}
+
+  stylelint:
     needs: build
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
-        localgov-version:
-          - '3.x'
-        drupal-version:
-          - '~10.0'
-        php-version:
-          - '8.1'
-          - '8.2'
-          - '8.3'
-
+        php-version: ["8.3"]
     steps:
-      - name: Clone Drupal container
-        uses: actions/checkout@v4
-        with:
-          repository: localgovdrupal/drupal-container
-          ref: php${{ matrix.php-version }}
-
       - name: Cached workspace
         uses: actions/cache@v4
         with:
-          path: ./html
-          key: localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-${{ github.run_id }}-${{ secrets.CACHE_VERSION }}
+          path: .
+          key: build-${{ matrix.php-version }}-${{ github.run_id }}
           restore-keys: |
-            localgov-build-${{ matrix.localgov-version }}-${{ matrix.drupal-version }}-${{ matrix.php-version }}-
+            build-${{ matrix.php-version }}-
 
-      - name: Start Docker environment
-        run: docker compose -f docker-compose.yml up -d
-
-      - name: Run PHPUnit tests
+      - name: Lint CSS
+        if: ${{ hashFiles(format('./{0}/**/*.css', env.PROJECT_PATH)) != '' }}
         run: |
-          mkdir -p ./html/web/sites/simpletest && chmod 777 ./html/web/sites/simpletest
-          docker exec -t drupal bash -c 'chown docker:docker -R /var/www/html'
-          docker exec -u docker -t drupal bash -c "cd /var/www/html && ./bin/paratest --processes=4"
+          cd web/core
+          node ./node_modules/.bin/stylelint --ignore-path .stylelintignore --config .stylelintrc.json "../../${{ env.PROJECT_PATH }}/**/*.css"
