--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Install composer dependencies
         uses: ramsey/composer-install@v3
 
-      - name: Install core npm dependencies
+      - name: Install theme npm dependencies
         run: |
-          cd web/core
+          cd ${{ env.PROJECT_PATH }}
           npm i
 
   eslint-js:
@@ -63,8 +63,8 @@ jobs:
       - name: Lint JS
         if: ${{ hashFiles(format('./{0}/**/*.js', env.PROJECT_PATH)) != '' }}
         run: |
-          cd web/core
-          node ./node_modules/eslint/bin/eslint.js --ext .js --resolve-plugins-relative-to=./web/core ../../${{ env.PROJECT_PATH }}
+          cd ${{ env.PROJECT_PATH }}
+          npm run lint:js
 
   eslint-yaml:
     needs: build
@@ -146,5 +146,5 @@ jobs:
       - name: Lint CSS
         if: ${{ hashFiles(format('./{0}/**/*.css', env.PROJECT_PATH)) != '' }}
         run: |
-          cd web/core
-          node ./node_modules/.bin/stylelint --ignore-path .stylelintignore --config .stylelintrc.json "../../${{ env.PROJECT_PATH }}/**/*.css"
+          cd ${{ env.PROJECT_PATH }}
+          npm run lint:css
