--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest:
+    runs-on: ubuntu-latest
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
