--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,10 +36,10 @@ jobs:
       - name: Install composer dependencies
         uses: ramsey/composer-install@v3
 
-      # - name: Install core npm dependencies
-      #   run: |
-      #     cd web/core
-      #     npm install
+      - name: Install core npm dependencies
+        run: |
+          cd web/core
+          npm install
 
       - name: Install theme npm dependencies
         run: |
