--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,21 +13,17 @@ on:
 
 env:
   PROJECT_PATH: web/themes/custom/pcc
+  PHP_VERSION: "8.3"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-version: ["8.3"]
-
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
           path: .
-          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          key: build-${{ github.run_id }}
 
       - name: Check out project
         uses: actions/checkout@v5
@@ -35,7 +31,7 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-version }}
+          php-version: ${{ env.PHP_VERSION }}
 
       - name: Install composer dependencies
         uses: ramsey/composer-install@v3
@@ -43,85 +39,72 @@ jobs:
       - name: Install core npm dependencies
         run: |
           cd web/core
-          npm i
+          npm install
+
+      - name: Install theme npm dependencies
+        run: |
+          cd ${{ env.PROJECT_PATH }}
+          npm install
 
   eslint-js:
     needs: build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
           path: .
-          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          key: build-${{ github.run_id }}
           restore-keys: |
-            build-${{ matrix.php-version }}-
+            build-
       - name: Lint JS
-        if: ${{ hashFiles(format('./{0}/**/*.js', env.PROJECT_PATH)) != '' }}
+        if: ${{ hashFiles(format('./{0}/js/**/*.js', env.PROJECT_PATH)) != '' }}
         run: |
-          cd web/core
-          node ./node_modules/eslint/bin/eslint.js --ext .js --resolve-plugins-relative-to=./web/core ../../${{ env.PROJECT_PATH }}
+          cd ${{ env.PROJECT_PATH }}
+          npm run lint:js
 
   eslint-yaml:
     needs: build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
           path: .
-          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          key: build-${{ github.run_id }}
           restore-keys: |
-            build-${{ matrix.php-version }}-
+            build-
       - name: Lint YAML
         if: ${{ hashFiles(format('./{0}/**/*.yml', env.PROJECT_PATH)) != '' }}
         run: |
-          cd web/core
-          node ./node_modules/eslint/bin/eslint.js --ext .yml --resolve-plugins-relative-to=./web/core ../../${{ env.PROJECT_PATH }}
+          cd ${{ env.PROJECT_PATH }}
+          npm run lint:yml
 
   phpcs:
     needs: build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
           path: .
-          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          key: build-${{ github.run_id }}
           restore-keys: |
-            build-${{ matrix.php-version }}-
-
+            build-
       - name: Check coding standards
         run: ./bin/phpcs --standard=Drupal,DrupalPractice --extensions=php,theme,install,css,js --ignore=node_modules -v ${{ env.PROJECT_PATH }}
 
   phpstan:
     needs: build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
           path: .
-          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          key: build-${{ github.run_id }}
           restore-keys: |
-            build-${{ matrix.php-version }}-
-
+            build-
       - name: Run static analysis checks
         if: ${{ hashFiles(format('./{0}/**/*.inc', inputs.project_path), format('./{0}/**/*.install', inputs.project_path), format('./{0}/**/*.module', inputs.project_path), format('./{0}/**/*.php', inputs.project_path), format('./{0}/**/*.profile', inputs.project_path), format('./{0}/**/*.test', inputs.project_path), format('./{0}/**/*.theme', inputs.project_path)) != '' }}
         run: |
@@ -130,21 +113,16 @@ jobs:
   stylelint:
     needs: build
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-version: ["8.3"]
     steps:
       - name: Cached workspace
         uses: actions/cache@v4
         with:
           path: .
-          key: build-${{ matrix.php-version }}-${{ github.run_id }}
+          key: build-${{ github.run_id }}
           restore-keys: |
-            build-${{ matrix.php-version }}-
-
+            build-
       - name: Lint CSS
         if: ${{ hashFiles(format('./{0}/**/*.css', env.PROJECT_PATH)) != '' }}
         run: |
-          cd web/core
-          node ./node_modules/.bin/stylelint --ignore-path .stylelintignore --config .stylelintrc.json "../../${{ env.PROJECT_PATH }}/**/*.css"
+          cd ${{ env.PROJECT_PATH }}
+          npm run lint:css
